test/tests/WrongGenericParameterType.panda
class WrongGenericParameterType<T:Value> {
    @class
    method main() {
        def w := WrongGenericParameterType<Object>()
    }
}